--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,12 +5,16 @@
   font-family: "Outfit", sans-serif;
 }
 
-
 @theme {
   --color-primary: rgb(15, 79, 124);
   --color-primary-dull: rgb(13, 65, 102);
 }
 
+@layer base {
+  html {
+    scroll-behavior: smooth;
+  }
+}
 
 .no-scrollbar::-webkit-scrollbar {
   display: none;
@@ -21,4 +25,74 @@
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
+}
+
+.rich-text {
+  font-size: 15px;
+  color: #7A7B7D;
+}
+
+.rich-text p {
+  margin-bottom: 16px;
+}
+
+.rich-text h1 {
+  font-size: 36px;
+  font-weight: 800;
+  color: #252525;
+  margin: 19px;
+}
+
+.rich-text h2 {
+  font-size: 22px;
+  font-weight: 700;
+  color: #252525;
+  margin-bottom: 10px;
+}
+
+.rich-text h3 {
+  font-size: 18px;
+  font-weight: 600;
+  color: #333333;
+  margin: 19px;
+}
+
+.rich-text h4 {
+  font-size: 16px;
+  font-weight: 500;
+  color: #444444;
+  margin: 19px;
+}
+
+.rich-text h5 {
+  font-size: 14px;
+  font-weight: 400;
+  color: #555555;
+  margin: 19px;
+}
+
+.rich-text h6 {
+  font-size: 12px;
+  font-weight: 400;
+  color: #666666;
+  margin: 19px;
+}
+
+.rich-text strong {
+  font-weight: 700;
+}
+
+.rich-text ol {
+  margin-left: 30px;
+  margin-bottom: 16px;
+  list-style-type: decimal;
+}
+
+.rich-text ul {
+  margin-left: 30px; 
+  list-style-type: disc;
+}
+
+.rich-text li {
+  margin-bottom: 8px;
 }
